--- a/client-side/src/index.css
+++ b/client-side/src/index.css
@@ -57,6 +57,19 @@ Global Styles
   padding: 0;
   box-sizing: border-box;
 }
+.bg_image{
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-origin: content-box;
+  /* position:absolute; */
+  background-size: 100% 100%;
+  /* background-color: black; */
+  position: fixed;
+  width: 100%;
+  height:100%;
+  background-clip: content-box;
+  /* margin-top: 200px; */
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -66,6 +79,7 @@ body {
   --bs-bg-opacity: 0.8;
   background-color: rgb(231, 228, 228)!important;
   overflow-x: hidden;
+
 }
 ul {
   list-style-type: none;
@@ -284,14 +298,30 @@ p {
 
 }
 
+.nav-link3{
+
+  color:azure;
+}
+
+hr{
+  border-width: 10px;
+  height: 50px;
+  background-color: white;
+  transition: all linear 0.5s;
+}
+
+hr:hover{
+  background-color: red;
+}
+
 .main-nav-bar{
-  background-color: rgb(231, 228, 228);
+  /* background-color: rgb(247, 58, 58); */
   width:100%;
   /* display:inline-block; */
   position:fixed;
   top:0;
-  z-index: 1;
-  margin-bottom:  5px;
+  /* z-index: 1; */
+  /* margin-bottom:  5px; */
 }
 
 .sideBar{
@@ -406,15 +436,16 @@ p {
   width:100%;
   margin-top: 0;
   position:relative;
-  height: 30px;
-  background-color: var(--clr-black);
+  height: 100px;
+  border-radius: 20px;
+  border-width: 50px;
+  background-color: rgb(134, 95, 95);
 }
 
 .my-fa-bars:hover{
   color:rgb(170, 118, 21);
   opacity:0.8;
 }
-
 
 .grid-item{
   background-color: var(--clr-black);
@@ -432,14 +463,14 @@ th,thead{
 }
 
 .btn-cart{
-  background-color: rgb(231, 228, 228);
+  /* background-color: rgb(247, 27, 27); */
   color:rgb(133, 131, 131);
   border-width: 0;
-  margin-right: 10px;
+  margin-right: 5px;
 }
 
 .btn-cart:hover{
-  color: rgb(32, 31, 29);
+  color: rgb(241, 175, 43);
 }
 
 .nav_sec{
